--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
   <body data-page>
     <!-- Header section -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="conteiner header__conteiner">
         <a class="logo header__logo link" href="./index.html"
           ><span class="header__logo--cl">Web</span>Studio</a
@@ -60,16 +60,16 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-- Main section -->
     <main>
       <!-- Hero section -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="conteiner">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero__btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
-      </section>
+      </section> -->
       <!-- Studio section -->
       <section class="studio section">
         <div class="conteiner">
@@ -123,7 +123,7 @@
         </div>
       </section>
       <!-- Portfolio section -->
-      <section class="portfolio section">
+      <!-- <section class="portfolio section">
         <div class="conteiner">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="portfolio__list list card-set">
@@ -165,9 +165,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Contacts section -->
-      <section class="contacts section">
+      <!-- <section class="contacts section">
         <div class="conteiner">
           <h2 class="section-title">Наша команда</h2>
           <ul class="contacts__list list card-set">
@@ -425,9 +425,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Clients section -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="conteiner">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients__list list card-set">
@@ -469,10 +469,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- Footer section -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__conteiner conteiner">
         <div class="footer__block">
           <a class="header__logo link" href="./index.html"
@@ -574,7 +574,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
